--- a/templates/predict.html
+++ b/templates/predict.html
@@ -9,7 +9,9 @@
 <div class="ui container", style="margin-top:50px">
 
   <h1>Iris Species Prediction</h1>
-    <div class="row justify-content-md-center">
+  <p>This is a test message</p>
+  
+      <div class="row justify-content-md-center">
        <div class="ui small image", style="text-align: center">
             {% if prediction_result == 0 %}
 
